<resources>
    <string name="app_name">Shows-GregaMezic</string>


    <!-- LOGIN ACTIVITY -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Password again</string>
    <string name="button_login_text">LOG IN</string>
    <string name="button_register_text">REGISTER</string>
    <string name="welcome_message">You\'re in!</string>
    <string name="dialog_exit_message">Are you sure you want to cancel? All of your data will not be saved</string>
    <string name="dialog_exit_title">Cancel adding episode</string>

    <!-- SHOWS ACTIVITY -->
    <string name="shows_title">Shows</string>
    <string name="episodes">Episodes</string>
    <string name="episodes_sleeping_text">Someone has fallen asleep.\nDon\'t wake him up.</string>
    <string name="add_episodes">Add some episodes</string>

    <!-- EPISODES -->
    <string name="episode_name">Episode title</string>
    <string name="episode_description">Episode description</string>
    <string name="button_save_episode">SAVE</string>
    <string name="remember_me">Remember me</string>
    <string name="add_episode">Add episode</string>
    <string name="upload_photo">Upload photo</string>
    <string name="change_photo">Change photo</string>
    <string name="season">Season</string>
    <string name="save">SAVE</string>
    <string name="episode">Episode</string>
    <string name="e_mail">e-mail</string>
    <string name="register_name">Register</string>
    <string name="or">or</string>
    <string name="create_an_account">Create an account</string>
    <string name="network_error">Unknown error! Please try again!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="shows_title_splash">shows</string>
    <string name="show_already_liked">You already liked the show</string>
    <string name="show_already_disliked">You already disliked the show</string>
    <string name="comments">Comments</string>
    <string name="no_comments_text">Sorry, we don\'t have comments yet.\nBe first who will write a review</string>
    <string name="write_comments">Write a comment</string>
    <string name="post">Post</string>

</resources>
