<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/disabled_pink"
        android:indeterminateOnly="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_img_logo_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/image_logo">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:paddingBottom="15dp"
            android:paddingTop="30dp"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/default_font" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_username"
        android:layout_marginTop="40dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/disabled_pink">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:paddingBottom="15dp"
            android:paddingTop="30dp"
            android:inputType="textPassword"
            android:textSize="@dimen/default_font" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_remember_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
        app:layout_constraintStart_toStartOf="parent"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/remember_me" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_click_selector"
        android:text="@string/button_login_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cb_remember_login" />


    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/text_regular"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:text="@string/or"/>

    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:text="@string/create_an_account"/>


</androidx.constraintlayout.widget.ConstraintLayout>