<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/view_toolbar" />


    <LinearLayout
        android:id="@+id/linear_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:paddingLeft="@dimen/double_padding"
            android:paddingRight="@dimen/double_padding"
            android:paddingTop="@dimen/double_padding"
            android:paddingBottom="@dimen/default_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textSize="@dimen/add_episodes_font"
            android:textColor="@color/pink_episodes"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear_episode_image_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_episode_camera"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:paddingLeft="@dimen/double_padding"
            android:paddingRight="@dimen/double_padding"
            android:paddingTop="@dimen/double_padding"
            android:paddingBottom="@dimen/default_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:textSize="@dimen/add_episodes_font"
            android:textColor="@color/pink_episodes"
            android:textStyle="bold" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_episode_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/btn_save_episode">

        <EditText
            android:id="@+id/input_episode_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/episode_name"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/default_font" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_episode_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_episode_name"
        android:layout_marginBottom="40dp">

        <EditText
            android:id="@+id/input_episode_desciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/episode_description"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/default_font" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_save_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/default_padding"
        android:text="@string/button_save_episode"
        android:background="@drawable/button_click_selector" />

</androidx.constraintlayout.widget.ConstraintLayout>