<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <include
        layout="@layout/view_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-7dp"
        android:backgroundTint="@color/disabled_pink"
        android:indeterminateOnly="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar1" />


    <LinearLayout
        android:id="@+id/linerar_no_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_img_no_comments" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/no_comments_text"
            android:textColor="@color/text_light"
            android:textSize="@dimen/add_episodes_font" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar1"
        app:layout_constraintBottom_toTopOf="@+id/et_comment" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_marginBottom="@dimen/default_padding"
            android:hint="@string/write_comments"
            android:background="@drawable/rounded_edittext" />

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/et_comment"
            android:layout_marginEnd="23dp"
            app:layout_constraintTop_toTopOf="@+id/et_comment"
            app:layout_constraintBottom_toBottomOf="@+id/et_comment"
            android:text="@string/post" />

</androidx.constraintlayout.widget.ConstraintLayout>